Version 1.4:

Core changes:
- added bilinear and bilinear plus filters

Version 1.3.1:

Core changes:
- fixed reversed Flash identification for 64k Flash

Version 1.3:

Core changes:
- added support for Flash 128K (thanks DesktopMan)
- added checks for out of memory condition
- added sound volume option
- fixed message when failed to write battery file (previously always saying
  failure to open file NULL)
- fixed sound mixing ratios specified in 0x4000082 (thanks Damian)
- simulating memory behaviour when no cartridge present (32-bits still
  incorrect)
Windows version:
- automatically apply IPS patch if it exists (configurable)
- added save/load support in the memory viewer
- added support for filters in 32-bit mode for all filters
- added AVI writing support (no sound yet)
- can now pause emulator before loading any file
- memory viewer now displays current edit address
- removed some test code introduced at version 1.1 that slows down the emulator
- exporting GSA snapshot defaults title to internal name
- fixed missing check marks on layers menu
- fixed bug showing maker code/name from some old games
SDL version:
- added support for long options
- added support for passing configuration file name
- added profiling support (GMON format - see README)
- added support for filters in 32-bit mode for all filters
- automatically apply IPS patch if it exists
- improved search for configuration file: current directory, user directory,
  executable directory (in order) are searched
- fixed configuration problem with saveType and removeIntros
Porting:
- fixed big endian problems in SGB code
- fixed big endian problems with rotated sprites
- fixed big endian sound endianess

Version 1.2:

Core changes:
- added MidiKey2Freq bios call (thanks Chris Moeller)
- added AdvanceMAME Scale2x and Simple 2x filters
- added support for higher frameskip (up to 9)
- added C core for portability
- added big endian support
- added support for movement sensor (thanks Parasyte)